[tool.poetry]
name = "DisTelBroadBot"
version = "0.1.0"
description = ""
authors = ["Dario Caricchio <dariocaricchio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
wikiquote = "^0.1.14"
lxml = "^4.6.2"
replit = "^2.0.0"
pyTelegramBotAPI = "^3.7.6"
python-dotenv = "^0.15.0"
colorama = "^0.4.4"
python-box = "^5.3.0"
twilio = "^6.53.0"
pysocks = "^1.7.1"
discord-flags = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
